--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,12 +3,22 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: "Hugo Docs" # Website name
+title: "Open NISQ" # Website name
 baseURL: 'https://example.com/' # Website URL
 
 ############################
 ## PAGE OPTIONS
 ############################
+markup:
+  goldmark:
+    extensions:
+      passthrough:
+        delimiters:
+          block:
+          - - \[
+            - \]
+          - - $$
+            - $$
 
 cascade:
   # Docs folder options
