--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -49,7 +49,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} My Company. This work is licensed under {license}'
+    notice: '© {year} OpenVQE was created by Mohammad Haidar. It is licensed under the terms of the MIT License'
     license:
       enable: true
       allow_derivatives: false
