added content donate added layout donate listhtml

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -23,6 +23,9 @@ main:
   - name: Community
     url: community/
     weight: 70
+  - name: Donate
+    url: donate/
+    weight: 70
 
 sidebar:
   - identifier: more
